--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -51,7 +51,8 @@
         <service
             android:name=".service_notify"
             android:enabled="true"
-            android:exported="true"></service>
+            android:exported="true"
+            android:process="com.example.tannguyen.project2017.service"></service>
     </application>
 
 </manifest>
